--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -8,6 +8,14 @@
     margin-bottom: 32px;
 }
 
+.hero-detail-OS {
+	font-size: 15px;
+}
+
+.hero-cta {
+	margin-bottom: 8px;
+}
+
 .hero-illustration {
 	position: relative;
     margin-top: 124px;
@@ -42,8 +50,8 @@
 
     .hero {
 		text-align: left;
-        padding-top: 92px;
-        padding-bottom: 92px;
+        padding-top: 125px;
+        padding-bottom: 110px;
     }
 
 	.hero-inner {
