--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -15,10 +15,8 @@
 		bottom: 0;
 		left: 0;
 		width: 100%;
-		height: 300px;
-		background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTQ0MCIgaGVpZ2h0PSIyNjciIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+ICA8cGF0aCBkPSJNLjMzOC44NDJDMTY3LjQ1NSA4My4zOTQgNjQ3LjM0MiA4My4zOTQgMTQ0MCAuODQyVjI2N0guMzM4Qy0xNjYuNzggNy4wMS0xNjYuNzgtODEuNzEuMzM4Ljg0MnoiIGZpbGw9IiMxRDJCNEMiIGZpbGwtcnVsZT0iZXZlbm9kZCIvPjwvc3ZnPg==);
-		background-size: 1440px 300px;
-		background-repeat: no-repeat;
+		height: 160px;
+        background: #1d2b4c;
 	}
 
     a {
@@ -78,7 +76,7 @@
 		margin-top: 116px; /* Give more padding because of the footer bg */
 
 		&::before {
-			height: 267px;
+			height: 190px;
 			background-size: 1440px 267px;
 		}
 	}
