Add more images

--- a/src/scss/layout/_features-extended.scss
+++ b/src/scss/layout/_features-extended.scss
@@ -101,5 +101,11 @@
             margin-left: -70px;
             margin-right: 20px;
         }
+
+        img.odd.ssl {
+            width: 580px;
+            margin-left: -70px;
+            margin-right: 20px;
+        }
     }
 }
